--- a/Yapbam/src/Resources_tr.properties
+++ b/Yapbam/src/Resources_tr.properties
@@ -29,35 +29,49 @@ MainFrame.showColumns=S\u00fctunlar\u0131 g\u00f6r\u00fcnt\u00fcle...
 MainFrame.showColumns.ToolTip=S\u00fctunlar\u0131 g\u00f6stermek veya gizlemek i\u00e7in bu men\u00fcy\u00fc kullan\u0131n
 
 MainMenu.File=Dosya
+MainMenu.File.Mnemonic=F
 MainMenu.File.ToolTip=Hesap dosyalar\u0131n\u0131 olu\u015fturman\u0131za, a\u00e7man\u0131za ve kaydetmenize olanak sa\u011flar
 
 MainMenu.NewFile=Yeni
+MainMenu.NewFile.Mnemonic=N
 MainMenu.NewFile.ToolTip=Yeni bir bo\u015f hesap dosyas\u0131 olu\u015fturur (i\u015flem veya hesap olmadan) 
 MainMenu.NewFile.ConfirmMessage=Yeni bir bo\u015f veri dosyay\u0131 olu\u015fturmak \u00fczeresiniz. Devam etmek istiyor musunuz?
 
 MainMenu.Open=A\u00e7
+MainMenu.Open.Mnemonic=O
+MainMenu.Open.Accelerator=O
 MainMenu.Open.ToolTip=Daha \u00f6nce kaydedilen bir hesap dosyas\u0131n\u0131 a\u00e7ar
 
 MainMenu.Save=Kaydet
+MainMenu.Save.Mnemonic=S
+MainMenu.Save.Accelerator=S
 MainMenu.Save.ToolTip=Ge\u00e7erli dosyay\u0131 kaydeder
 
 MainMenu.SaveAs=Farkl\u0131 Kaydet ...
+MainMenu.SaveAs.Mnemonic=A
 MainMenu.SaveAs.ToolTip=Ge\u00e7erli dosyan\u0131n bir kopyas\u0131n\u0131 olu\u015fturur
 
 MainMenu.Import=\u0130\u00e7e aktar
+MainMenu.Import.Mnemonic=I
 MainMenu.Import.ToolTip=Daha \u00f6nce ba\u015fka bir hesap y\u00f6neticisi ile kaydetti\u011finiz metin dosyas\u0131ndan veri al\u0131r
 MainMenu.Export=D\u0131\u015fa aktar ...
+MainMenu.Export.Mnemonic=E
 MainMenu.Export.ToolTip=Verileri bir metin dosyas\u0131na d\u0131\u015fa aktar\u0131r
 
 MainMenuBar.Print=Yazd\u0131r...
 MainMenuBar.Print.ToolTip=Yazd\u0131rmaya ba\u015fla
+MainMenuBar.Print.Accelerator=P
+MainMenu.Print.Mnemonic=R
 MainMenuBar.Print.Error.Message=<html>Yazd\u0131rma s\u0131ras\u0131nda \u015fu hata olu\u015ftu\: <br>{0}</html>
 MainMenuBar.Print.Error.Title=Yazd\u0131rma s\u0131ras\u0131nda hata
 
 MainMenu.Preferences=Se\u00e7enekler
 MainMenu.Preferences.ToolTip=Tercihler y\u00f6netimi ileti\u015fim kutusunu a\u00e7ar
+MainMenu.Preferences.Mnemonic=P
 
 MainMenu.Quit=\u00c7\u0131k\u0131\u015f
+MainMenu.Quit.Mnemonic=Q
+MainMenu.Quit.Accelerator=Q
 MainMenu.Quit.ToolTip=Uygulamay\u0131 kapat\u0131r
 
 #This menu has been removed
@@ -66,23 +80,32 @@ MainMenu.Quit.ToolTip=Uygulamay\u0131 kapat\u0131r
 #MainMenu.Accounts.ToolTip=Allows you to manage the accounts (creation, renaming, ...)
 
 MainMenu.Accounts.New=Yeni hesap
+MainMenu.Accounts.New.Mnemonic=A
 MainMenu.Accounts.New.ToolTip=Yeni bir hesap olu\u015fturur
 
 MainMenu.Transactions=\u0130\u015flemler
+MainMenu.Transactions.Mnemonic=T
 MainMenu.Transactions.ToolTip=\u0130\u015flemleri y\u00f6netmenizi sa\u011flar (olu\u015fturma, d\u00fczenleme, ...)
 
 MainMenu.Transactions.New=Yeni i\u015flem
+MainMenu.Transactions.New.Mnemonic=N;
+MainMenu.Transactions.New.Accelerator=N
 MainMenu.Transactions.New.ToolTip=Yeni bir i\u015flem olu\u015fturur
 
 MainMenu.Transactions.Duplicate=\u0130\u015flemin kopyas\u0131n\u0131 olu\u015ftur
 MainMenu.Transactions.Duplicate.ToolTip=Se\u00e7ili i\u015flemin bir kopyas\u0131n\u0131 olu\u015fturur
+MainMenu.Transactions.Duplicate.Mnemonic=D
+MainMenu.Transactions.Duplicate.Accelerator=D
 
 MainMenu.Transactions.Delete=\u0130\u015flemi sil
+MainMenu.Transactions.Delete.Mnemonic=D
 #MainMenu.Transactions.Delete.Accelerator=D
 MainMenu.Transactions.Delete.ToolTip=Se\u00e7ili i\u015flemi siler
 
 MainMenu.Transactions.Edit=\u0130\u015flemi d\u00fczenle
+MainMenu.Transactions.Edit.Mnemonic=E
 MainMenu.Transactions.Edit.ToolTip=Se\u00e7ili i\u015flemi d\u00fczenler
+MainMenu.Transactions.Edit.Accelerator=E
 
 
 
