--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -2,6 +2,14 @@ Version en cours de développement	Bug connu :	Bugs connus :	Changement :	Change
 version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
+	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
+	
+version	0.18.2 (25/05/2015)
+fix
+	Lorsqu'on modifiait une opération dans le tableau des "Opérations" de l'onglet "Historique du solde", et que les opérations étaient triées de la plus récente vers la plus ancienne, l'opération sélectionnée en fin d'édition n'était pas celle éditée. 
+improvement
+	Les dialogues peuvent maintenant être fermées avec la touche d'échappement.
+	Ajout des traductions partielles en russe et néerlandais.
 
 version	0.18.1 (22/02/2015)
 fix
