--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -27,6 +27,7 @@ MainFrame.ShowSubtransactions.None=Aucune
 MainFrame.ShowSubtransactions.ToolTip=Ce menu permet d'afficher ou masquer toutes les sous-op\u00e9rations
 MainFrame.showColumns=Afficher les colonnes ...
 MainFrame.showColumns.ToolTip=Ce menu permet d'afficher/masquer les colonnes
+MainFrame.stat.summary=Nombre de d\u00e9penses \: {0}, nombre de recettes \: {1}, solde \: {2}
 
 MainMenu.File=Fichier
 MainMenu.File.Mnemonic=F
@@ -1299,4 +1300,5 @@ messages.open.tooltip=Certains messages sont disponibles, cliquez sur ce bouton 
 messages.showReadMessages=Afficher les messages d\u00e9j\u00e0 lus ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=Aucun message non lu disponible
+
 
