--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -27,6 +27,8 @@ MainFrame.ShowSubtransactions.None=Aucune
 MainFrame.ShowSubtransactions.ToolTip=Ce menu permet d'afficher ou masquer toutes les sous-op\u00e9rations
 MainFrame.showColumns=Afficher les colonnes ...
 MainFrame.showColumns.ToolTip=Ce menu permet d'afficher/masquer les colonnes
+MainFrame.stat.hide.tip=Cliquez ici pour masquer les d\u00e9tails
+MainFrame.stat.show.tip=Cliquez ici pour obtenir plus de d\u00e9tails
 MainFrame.stat.summary=Nombre de d\u00e9penses \: {0}, nombre de recettes \: {1}, solde \: {2}
 
 MainMenu.File=Fichier
@@ -418,6 +420,14 @@ PeriodicalTransactionManager.title=Gestion des op\u00e9rations p\u00e9riodiques
 PeriodicalTransactionManager.toolTip=Cet onglet permet de g\u00e9rer les op\u00e9rations p\u00e9riodiques
 PeriodicalTransactionManager.active.column=Active
 PeriodicalTransactionManager.nextDate.column=Prochaine \u00e9ch\u00e9ance
+PeriodicalTransactionManager.nextMonth=au cours du prochain mois
+PeriodicalTransactionManager.nextQuarter=au cours du trimestre prochain
+PeriodicalTransactionManager.nextYear=au cours de l'ann\u00e9e prochaine
+PeriodicalTransactionManager.settings.nextMonth=Mois Prochain
+PeriodicalTransactionManager.settings.nextQuarter=Trimestre prochain
+PeriodicalTransactionManager.settings.nextYear=Ann\u00e9e prochaine
+PeriodicalTransactionManager.settings.title=Param\u00e8tres
+PeriodicalTransactionManager.summary={1} op\u00e9rations {0}. Total des d\u00e9penses \: {2}. Total des recettes \: {3}. Solde \: {4}
 PeriodicalTransactionManager.period.column=Tous les
 PeriodicalTransactionManager.period.daily.content={0,number} jours
 PeriodicalTransactionManager.period.monthly.content={0,number} mois le {1,number}
@@ -426,6 +436,8 @@ PeriodicalTransactionManager.new.toolTip=Ouvre le dialogue de cr\u00e9ation d'un
 PeriodicalTransactionManager.delete.toolTip=Supprime l'op\u00e9ration p\u00e9riodique s\u00e9lectionn\u00e9e
 PeriodicalTransactionManager.edit.toolTip=Ouvre le dialogue d'\u00e9dition de l'op\u00e9ration p\u00e9riodique s\u00e9lectionn\u00e9e
 PeriodicalTransactionManager.duplicate.toolTip=Duplique puis \u00e9dite l'op\u00e9ration p\u00e9riodique s\u00e9lectionn\u00e9e
+PeriodicalTransactionManager.ignoreFilter=Ignorer le filtre
+PeriodicalTransactionManager.ignoreFilter.tooltip=Cochez cette case pour ne pas filtrer la table des transactions
 
 AccountManager.balanceColumn.title=Solde initial
 AccountManager.deleteAccount.toolTip=Supprime le compte s\u00e9lectionn\u00e9
@@ -583,7 +595,7 @@ BudgetPanel.perYear=Vue par an
 BudgetPanel.perYear.tooltip=Cliquez ici pour obtenir la ventilation par ann\u00e9e
 BudgetPanel.averageColumn.checkBox=Colonne de moyennes
 BudgetPanel.averageColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les moyennes par cat\u00e9gories.
-BudgetPanel.sumColumn.checkBox=Colonnes de totaux
+BudgetPanel.sumColumn.checkBox=Colonne de totaux
 BudgetPanel.sumColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les totaux par cat\u00e9gories.
 BudgetPanel.sumLine.checkBox=Ligne de totaux
 BudgetPanel.sumLine.checkBox.tooltip=Cochez cette case pour ajouter au tableau une ligne contenant les totaux par date.
@@ -1300,5 +1312,7 @@ messages.open.tooltip=Certains messages sont disponibles, cliquez sur ce bouton 
 messages.showReadMessages=Afficher les messages d\u00e9j\u00e0 lus ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=Aucun message non lu disponible
+
+
 
 
