--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -762,7 +762,7 @@ Update.DownloadFailed.retry=Erneut versuchen
 #This message is displayed during the second part of the update process.
 Update.Install.title=Installation ...
 Update.Install.message=Bitte warten, Yapbam installiert ein Update.
-Update.Install.failure=<html>Leider ist ein unerwarteter Fehler aufgetreten.<br>Ihre Yapbam-Installation wurde m\u00f6glicherweise besch\u00e4digt.<br>Wir empfehlen dringend, das Programm erneut von dieser Seite herunterzuladen und neu zu installieren\: http\://www.yapbam.net</html>
+Update.Install.failure=<html>Leider ist ein unerwarteter Fehler aufgetreten.<br>Ihre Yapbam-Installation wurde m\u00f6glicherweise besch\u00e4digt.<br>Wir empfehlen dringend, das Programm erneut von dieser Seite herunterzuladen und neu zu installieren\: https\://www.yapbam.net</html>
 Update.Install.success=Yapbam wurde erfolgreich aktualisiert
 #-------- end of the update part --------
 
@@ -922,7 +922,7 @@ Tip.9=<html>Yapbam kann eine Zusammenfassung relativer Kontost\u00e4nde anzeigen
 ImportDialog.error.emptyFile=Die importierte Datei ist leer
 ImportDialog.error.exception=Beim Lesen der importierten Datei ist ein Fehler aufgetreten ({0})
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Ihre Version\: <B>{0}</B><BR>Neueste Version\: <B>{1}</B><BR><BR>Hinweise zum Release sind hier verf\u00fcgbar\: <b>http\://www.yapbam.net</b><BR><BR>Was m\u00f6chten Sie tun?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Ihre Version\: <B>{0}</B><BR>Neueste Version\: <B>{1}</B><BR><BR>Hinweise zum Release sind hier verf\u00fcgbar\: <b>https\://www.yapbam.net</b><BR><BR>Was m\u00f6chten Sie tun?</BODY></HTML>
 openDialog.fileDoesntExist=Die angebene Datei existiert nicht
 openDialog.targetDoesntExist=Das Ziel des gew\u00e4hlten Links existiert nicht
 
@@ -941,7 +941,7 @@ MainFrame.LastNotFound=Die zuletzt verwendete Datei ({0}) existiert nicht mehr
 #---------------------------------
 # New dialogs when an update is available but can't be installed (Yapbam installation directory is write protected).
 MainMenu.CheckUpdate.Success.systemProtected=<html>Ihre Version\: <B>{0}</B><BR>Aktuelle Version\: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis vom System gesch\u00fctzt wird (evtl. Windows UAC ?).<br><br>Sie m\u00fcssen dieses Update manuell mit dem Installationsprogramm installieren.<br><br>Dieses und die Release Notes sind verf\u00fcgbar unter <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Ihre Version\: <B>{0}</B><BR>Aktuelle Version\: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis schreibgesch\u00fctzt ist.<br><br>Die neue Version und die Release Notes sind verf\u00fcgbar unter <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Ihre Version\: <B>{0}</B><BR>Aktuelle Version\: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis schreibgesch\u00fctzt ist.<br><br>Die neue Version und die Release Notes sind verf\u00fcgbar unter <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
 
 #----------------------------------
@@ -1299,7 +1299,5 @@ messages.open.tooltip=Einige Nachrichten zur Verf\u00fcgung stehen, klicken Sie 
 messages.showReadMessages=Karte lesen Nachrichten ({0}/{1})
 messages.title=Nachrichten
 messagesnoMessageAvailable=Keine ungelesene Nachricht verf\u00fcgbar
-
-
 
 
