--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -194,7 +194,7 @@ BalanceHistory.transaction.tooltip=Op\u00e9rations et solde au jour le jour
 BalanceHistory.transaction.remainingBalance=Solde restant
 
 AboutDialog.Content=<html>Copyright &copy; 2009-2015 <b>{0}</b> - Tous droits r\u00e9serv\u00e9s<br>Version \: <b>{1}</b></html>
-AboutDialog.License.TabName=License
+AboutDialog.License.TabName=Licence
 AboutDialog.RelNotes.TabName=Notes de mise \u00e0 jour
 AboutDialog.Contributors.TabName=Contributeurs
 
@@ -775,7 +775,7 @@ Update.DownloadFailed.retry=R\u00e9essayer
 #This message is displayed during the second part of the update process.
 Update.Install.title=Installation ...
 Update.Install.message=Merci de patienter, Yapbam installe une mise \u00e0 jour.
-Update.Install.failure=<html>D\u00e9sol\u00e9, une erreur inattendue est survenue.<br>Votre copie de Yapbam est probablement corrompue.<br>Nous vous recommandons de r\u00e9installer Yapbam a partir de sa distribution officielle disponible ici \: http\://www.yapbam.net</html>
+Update.Install.failure=<html>D\u00e9sol\u00e9, une erreur inattendue est survenue.<br>Votre copie de Yapbam est probablement corrompue.<br>Nous vous recommandons de r\u00e9installer Yapbam a partir de sa distribution officielle disponible ici \: https\://www.yapbam.net</html>
 Update.Install.success=Yapbam a \u00e9t\u00e9 mis \u00e0 jour
 #-------- end of the update part --------
 
@@ -935,7 +935,7 @@ Tip.9=<html>Yapbam peut afficher un r\u00e9sum\u00e9 des soldes relatif.<hr styl
 ImportDialog.error.emptyFile=Le fichier import\u00e9 est vide
 ImportDialog.error.exception=Une erreur ({0}) est survenue lors de la lecture du fichier
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Votre version\: <B>{0}</B><BR>Version \u00e0 jour\: <B>{1}</B><BR><BR>Les notes de mise \u00e0 jour sont disponibles sur <b>http\://www.yapbam.net</b><BR><BR>Que souhaitez vous faire ?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Votre version\: <B>{0}</B><BR>Version \u00e0 jour\: <B>{1}</B><BR><BR>Les notes de mise \u00e0 jour sont disponibles sur <b>https\://www.yapbam.net</b><BR><BR>Que souhaitez vous faire ?</BODY></HTML>
 openDialog.fileDoesntExist=Le fichier s\u00e9lectionn\u00e9 n'existe pas
 openDialog.targetDoesntExist=La cible du raccourci s\u00e9lectionn\u00e9 n'existe pas
 
@@ -953,8 +953,8 @@ MainFrame.LastNotFound=Le dernier fichier ouvert ({0}) est introuvable
 
 #---------------------------------
 # New dialogs when an update is available but can't be installed (Yapbam installation directory is write protected).
-MainMenu.CheckUpdate.Success.systemProtected=<html>Votre version \: <B>{0}</B><BR>Version \u00e0 jour \: <B>{1}</B><BR><BR>Yapbam ne peut se mettre \u00e0 jour automatiquement car son r\u00e9pertoire d'installation est prot\u00e9g\u00e9 par le syst\u00e8me (par exemple par le contr\u00f4le des comptes utilisateurs de Windows).<br><br>Vous devrez donc appliquer cette mise \u00e0 jour manuellement \u00e0 l'aide de l'installeur.<br><br>Celui-ci, ainsi que les notes de mise \u00e0 jour, est disponible \u00e0 <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Votre version \: <B>{0}</B><BR>Votre version \: <B>{1}</B><BR><BR>Yapbam ne peut se mettre \u00e0 jour automatiquement car son r\u00e9pertoire d'installation est prot\u00e9g\u00e9 en \u00e9criture.<br><br>Cette nouvelle version et les notes de mise \u00e0 jour sont disponibles \u00e0 <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.systemProtected=<html>Votre version \: <B>{0}</B><BR>Version \u00e0 jour \: <B>{1}</B><BR><BR>Yapbam ne peut se mettre \u00e0 jour automatiquement car son r\u00e9pertoire d'installation est prot\u00e9g\u00e9 par le syst\u00e8me (par exemple par le contr\u00f4le des comptes utilisateurs de Windows).<br><br>Vous devrez donc appliquer cette mise \u00e0 jour manuellement \u00e0 l'aide de l'installeur.<br><br>Celui-ci, ainsi que les notes de mise \u00e0 jour, sont disponibles sur <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Votre version \: <B>{0}</B><BR>Votre version \: <B>{1}</B><BR><BR>Yapbam ne peut se mettre \u00e0 jour automatiquement car son r\u00e9pertoire d'installation est prot\u00e9g\u00e9 en \u00e9criture.<br><br>Cette nouvelle version et les notes de mise \u00e0 jour sont disponibles \u00e0 <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Ouvrir le site web de Yapbam
 
 #----------------------------------
@@ -1313,6 +1313,17 @@ messages.showReadMessages=Afficher les messages d\u00e9j\u00e0 lus ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=Aucun message non lu disponible
 
-
-
+LinkEditor.button.tooltip=Cliquez sur ce bouton pour ajouter ou modifier le lien
+LinkEditor.button.tooltip.disabled=Ce bouton est d\u00e9sactiv\u00e9 car vous n'\u00eates pas en train de modifier le champ commentaire
+LinkEditor.dialog.title=Modifier le lien
+LinkEditor.file=Fichier
+LinkEditor.file.tooltip=Cliquez sur ce bouton pour s\u00e9ctionner un fichier comme destination du lien
+LinkEditor.incorrectURL=Ce bouton est d\u00e9sactiv\u00e9 car l'URL est incorrecte
+LinkEditor.test=Tester
+LinkEditor.test.tooltip=Cliquez sur ce bouton pour tester le lien
+LinkEditor.text=Texte\:
+LinkEditor.text.tooltip=Entrez le texte du lien dans ce champ
+LinkEditor.textIsEmpty=Ce bouton est d\u00e9sactiv\u00e9 car le texte est vide
+LinkEditor.url=Url \:
+LinkEditor.url.tooltip=Entrez l'URL de destination dans ce champ
 
