--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -762,7 +762,7 @@ Update.DownloadFailed.retry=Tentar de novo
 #This message is displayed during the second part of the update process.
 Update.Install.title=Instalando ...
 Update.Install.message=Por favor espere, Yapbam est\u00e1 instalando a atualiza\u00e7\u00e3o.
-Update.Install.failure=<html>Desculpe, um erro inesperado aconteceu.<br>A c\u00f3pia do seu Yapbam pode estar danificada.<br>N\u00f3s recomendamos que voc\u00ea baixe e re-instale o Yapbam do nosso site official \: http\://www.yapbam.net</html>
+Update.Install.failure=<html>Desculpe, um erro inesperado aconteceu.<br>A c\u00f3pia do seu Yapbam pode estar danificada.<br>N\u00f3s recomendamos que voc\u00ea baixe e re-instale o Yapbam do nosso site official \: https\://www.yapbam.net</html>
 Update.Install.success=Yapbam foi atualizado com sucesso
 #-------- end of the update part --------
 
@@ -922,7 +922,7 @@ Tip.9=<html>Yapbam pode exibir o sum\u00e1rio do saldo relativo.<hr style\="widt
 ImportDialog.error.emptyFile=O arquivo importado est\u00e1 vazio
 ImportDialog.error.exception=Ocorreu um erro ({0}) ao ler o arquivo
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Sua vers\u00e3o\: <B>{0}</B><BR>\u00faltima vers\u00e3o\: <B>{1}</B><BR><BR>Notas de lan\u00e7amento est\u00e3o dispon\u00edveis aqui <b>http\://www.yapbam.net</b><BR><BR>O que voc\u00ea quer fazer ?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Sua vers\u00e3o\: <B>{0}</B><BR>\u00faltima vers\u00e3o\: <B>{1}</B><BR><BR>Notas de lan\u00e7amento est\u00e3o dispon\u00edveis aqui <b>https\://www.yapbam.net</b><BR><BR>O que voc\u00ea quer fazer ?</BODY></HTML>
 openDialog.fileDoesntExist=O arquivo selecionado n\u00e3o existe.
 openDialog.targetDoesntExist=O destino do atalho selecionado n\u00e3o existe
 
@@ -941,7 +941,7 @@ MainFrame.LastNotFound=O \u00daltimo arquivo aberto ({0}) n\u00e3o existe mais
 #---------------------------------
 # New dialogs when an update is available but can't be installed (Yapbam installation directory is write protected).
 MainMenu.CheckUpdate.Success.systemProtected=<html>Sua vers\u00e3o\: <B>{0}</B><BR>\u00daltima vers\u00e3o\: <B>{1}</B><BR><BR>Yapbam n\u00e3o pode se atualizar por que o diret\u00f3rio de sua instala\u00e7\u00e3o \u00e9 protegido pelo sistema (talvez windows UAC ?).<br><br>Voc\u00ea vai ter que instalar esta atualiza\u00e7\u00e3o manualmente usando o instalador.<br><br>O instalador e as notas de release est\u00e3o dispon\u00edveis na <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Sua vers\u00e3o\: <B>{0}</B><BR>\u00daltima vers\u00e3o\: <B>{1}</B><BR><BR>Yapbam n\u00e3o pode se atualizar por que o diret\u00f3rio de sua instala\u00e7\u00e3o tem prote\u00e7\u00e3o escrita.<br><br>A nova vers\u00e3o e as notas de release est\u00e3o dispon\u00edveis na <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Sua vers\u00e3o\: <B>{0}</B><BR>\u00daltima vers\u00e3o\: <B>{1}</B><BR><BR>Yapbam n\u00e3o pode se atualizar por que o diret\u00f3rio de sua instala\u00e7\u00e3o tem prote\u00e7\u00e3o escrita.<br><br>A nova vers\u00e3o e as notas de release est\u00e3o dispon\u00edveis na <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Abrir o site do Yapbam
 
 #----------------------------------
@@ -1299,7 +1299,5 @@ messages.open.tooltip=Algumas mensagens est\u00e3o dispon\u00edveis, clique nest
 messages.showReadMessages=Mostrar mensagens de leitura ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=Nenhuma mensagem n\u00e3o lida dispon\u00edvel
-
-
 
 
