--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -9,6 +9,8 @@ version	0.18.7 (??/12/2015)
 fix
 	Les couleurs de fond des cellules de l'onglet "Relevés de compte" étaient incorrectes quand les lignes étaient triées.
 	Corrige l'alignement vertical des colonnes "description" et "commentaire" pour le thème Nimbus (améliore cet alignement avec les autres thèmes - voir les bugs connus).
+improvement
+	Les opérations archivées peuvent à présent être restaurées vers le fichier de données "standard".
 
 version	0.18.6 (29/11/2015)
 fix
