--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -9,6 +9,8 @@ version	0.18.7 (12/??/2015)
 fix
 	The background colors of cells in the tab "Account statements" were incorrect when the lines were sorted.
 	Fixes vertical alignment of description and comment columns for Nimbus theme (and improves it with other themes - see known bugs).
+improvement
+	Archived transactions can now be restored back.
 
 version	0.18.6 (11/29/2015)
 fix
