--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -815,7 +815,7 @@ Tip.2=<html>Vous pouvez d\u00e9finir des seuils d'alerte sur chacun de vos compt
 Tip.3=<html>Vos op\u00e9rations courantes peuvent \u00eatre g\u00e9n\u00e9r\u00e9es automatiquement.<hr style\="width\:40%">Pour ce faire, vous pouvez d\u00e9finir des <b>op\u00e9rations p\u00e9riodiques</b> dans l'onglet <b>{0}</b>.<br>Un moyen encore plus simple est de s\u00e9lectionner une op\u00e9ration puis <b>{1}</b> dans le menu contextuel (clic-droit sur l'op\u00e9ration).</html>
 Tip.4=<html>Pensez \u00e0 utiliser le clic-droit.<hr style\="width\:40%">Un clic-droit sur une op\u00e9ration permet de la modifier, la dupliquer ou la supprimer rapidement.</html>
 Tip.5=<html>L'onglet <b>{0}</b> permet d'effectuer de nombreuses modifications&nbsp;\:<hr style\="width\:40%">- \u00c9diter, cr\u00e9er, supprimer les op\u00e9rations p\u00e9riodiques.<br>- Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. G\u00e9rer les ch\u00e9quiers<br>- Renommer les cat\u00e9gories<br>- etc...</li></ul></html>
-Tip.6=<html>Vous pouvez acc\u00e9l\u00e9rer vos saisies gr\u00e2ce aux raccourcis clavier.<hr style\="width\:40%">Lorsque vous \u00e9ditez une date, la <b>fl\u00e8che haute</b> passe au lendemain, la <b>fl\u00e8che basse</b> passe \u00e0 la veille.<br>De m\u00eame, pour les saisies de nombres (par exemple, le nombre de ch\u00e8ques dans un ch\u00e9quier), ces fl\u00e8ches augmentent ou diminuent d'une unit\u00e9.</html>
+Tip.6=<html>Vous pouvez acc\u00e9l\u00e9rer vos saisies gr\u00e2ce aux raccourcis clavier.<hr style\="width\:40%">Lorsque vous \u00e9ditez une date, la <b>fl\u00e8che haute</b> passe au lendemain, la <b>fl\u00e8che basse</b> passe \u00e0 la veille.<br>Vous pouvez \u00e9galement taper <b>+<i>x</i></b> dans le champ ce qui signifie <i>x</i> jours dans le futur. <br>++x pour x mois dans le futur, +++x pour x ann\u00e9es. Tapez <b>-x</b>,--x,---x pour x jours, mois, ann\u00e9es dans le pass\u00e9.<br><br>De m\u00eame, pour les saisies de nombres (par exemple, le nombre de ch\u00e8ques dans un ch\u00e9quier), ces fl\u00e8ches augmentent ou diminuent d'une unit\u00e9.</html>
 #-------- end of the welcome screen part --------
 
 #-------- AccountsSummary View --------
@@ -1250,18 +1250,24 @@ GenericButton.select=S\u00e9lectionner
 Generic.selectAll=Tout s\u00e9lectionner
 Generic.unselectAll=Tout d\u00e9selectionner
 
-#A new tool to archive old transactions in a separate file
+#A tool to archive old transactions in a separate file
 Archive.menu.name=Archiver
+Archive.restore.title=Restaurer
+Archive.restore.tooltip=S\u00e9lectionnez cette option pour restaurer certaines op\u00e9rations du fichier d'archive vers fichier de donn\u00e9es actuel.
+Archive.archive.tooltip=S\u00e9lectionnez cette option pour archiver les op\u00e9rations.
 Archive.menu.tooltip=D\u00e9place les anciennes op\u00e9rations vers un fichier d'archivage
 Archive.selectionDialog.title=Choisissez le fichier d'archivage ou cr\u00e9ez en un nouveau
 Archive.statementSelection.helpMessage=<html>Merci de s\u00e9lectionner les relev\u00e9s \u00e0 archiver.<br><br>Cliquez sur une cellule de la colonne "{0}" pour afficher la liste des relev\u00e9s.<br>Le relev\u00e9 s\u00e9lectionn\u00e9 ainsi que tous les pr\u00e9c\u00e9dents seront archiv\u00e9s.</html>
+Archive.statementSelection.restoreHelpMessage=<html>Merci de s\u00e9lectionner les relev\u00e9s \u00e0 restaurer.<br><br>Cliquez sur une cellule de la colonne "{0}" pour afficher la liste des relev\u00e9s.<br>Le relev\u00e9 s\u00e9lectionn\u00e9 ainsi que tous les suivants seront restaur\u00e9s.</html>
 Archive.statementSelection.ignored.title=Ignor\u00e9
 Archive.statementSelection.nothingSelected=Il n'y a pas de relev\u00e9 dans ce compte
 Archive.statementSelection.noTransactionSelected=Aucune op\u00e9ration n'est s\u00e9lectionn\u00e9e
 Archive.statementSelection.until.title=Jusqu'au relev\u00e9
+Archive.statementSelection.from.title=A partir de relev\u00e9
 Archive.accountBalancesNotMatch=Le solde initial du compte <b>"{0}"</b> ({1}) est diff\u00e9rent du solde final de ce compte dans l'archive ({2}).
 Archive.accountBalancesNotMatchFinalMessage=Voulez-vous tout de m\u00eame continuer ?
 Archive.report={0} op\u00e9rations ont \u00e9t\u00e9es archiv\u00e9es.
+Archive.restore.report={0} transactions ont \u00e9t\u00e9 restaur\u00e9es avec succ\u00e8s.
 
 #New setting of the transaction table
 MainFrame.Transactions.Preferences.separateExpenseReceipt=Afficher les recettes et les d\u00e9penses dans des colonnes s\u00e9par\u00e9es
@@ -1326,4 +1332,7 @@ LinkEditor.text.tooltip=Entrez le texte du lien dans ce champ
 LinkEditor.textIsEmpty=Ce bouton est d\u00e9sactiv\u00e9 car le texte est vide
 LinkEditor.url=Url \:
 LinkEditor.url.tooltip=Entrez l'URL de destination dans ce champ
+
+generic.recommended.with.parenthesis=(Recommand\u00e9)
+
 
