--- a/Yapbam/src/Resources_nl.properties
+++ b/Yapbam/src/Resources_nl.properties
@@ -467,11 +467,13 @@ RecentFiles.unreachable.title=Bestand niet gevonden
 
 #New generic wordings
 
-#A new tool to archive old transactions in a separate file
+#A tool to archive old transactions in a separate file
 
 #New setting of the transaction table
 
 #New settings of the transaction table in the balance history pane
+
+
 
 
 
