--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1237,7 +1237,7 @@ GenericButton.select=Selecione
 Generic.selectAll=Selecione tudo
 Generic.unselectAll=Diselecione tudo
 
-#A new tool to archive old transactions in a separate file
+#A tool to archive old transactions in a separate file
 Archive.menu.name=Arquivo
 Archive.menu.tooltip=Arquivos de extratos antigos para arquivar em um arquivo
 Archive.selectionDialog.title=Selecione um arquivo ou crie um novo
@@ -1299,5 +1299,8 @@ messages.open.tooltip=Algumas mensagens est\u00e3o dispon\u00edveis, clique nest
 messages.showReadMessages=Mostrar mensagens de leitura ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=Nenhuma mensagem n\u00e3o lida dispon\u00edvel
+
+
+generic.recommended.with.parenthesis=(recomendado)
 
 
