--- a/Yapbam/src/Resources_ru.properties
+++ b/Yapbam/src/Resources_ru.properties
@@ -379,11 +379,13 @@ MainMenu.CheckUpdate.HttpError=<HTML><BODY>\u041e\u0448\u0438\u0431\u043a\u0430 
 
 #New generic wordings
 
-#A new tool to archive old transactions in a separate file
+#A tool to archive old transactions in a separate file
 
 #New setting of the transaction table
 
 #New settings of the transaction table in the balance history pane
+
+
 
 
 
