--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -5,12 +5,13 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
-version	0.18.7 (??/12/2015)
+version	0.18.7 (28/12/2015)
 fix
 	Les couleurs de fond des cellules de l'onglet "Relevés de compte" étaient incorrectes quand les lignes étaient triées.
 	Corrige l'alignement vertical des colonnes "description" et "commentaire" pour le thème Nimbus (améliore cet alignement avec les autres thèmes - voir les bugs connus).
 improvement
 	Les opérations archivées peuvent à présent être restaurées vers le fichier de données "standard".
+	Ajoute la possibilité de saisir une date <i>x</i> jours, mois, années dans le futur en tapant +x, ++x, +++x dans le champ (respectivement -x, --x, --x pour x jours/mois,années dans le passé).
 
 version	0.18.6 (29/11/2015)
 fix
