--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -5,12 +5,13 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
-version	0.18.7 (12/??/2015)
+version	0.18.7 (12/28/2015)
 fix
 	The background colors of cells in the tab "Account statements" were incorrect when the lines were sorted.
 	Fixes vertical alignment of description and comment columns for Nimbus theme (and improves it with other themes - see known bugs).
 improvement
 	Archived transactions can now be restored back.
+	Adds the ability to enter date <i>x</i> days, month, year in the future typing +x, ++x, +++x in the field (respectively -x, --x, --x for x days/months,years in the past).
 
 version	0.18.6 (11/29/2015)
 fix
