--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -486,6 +486,8 @@ StatisticsPlugin.bar.receipt=Recettes
 StatisticsPlugin.bar.tabname=Recettes/d\u00e9penses
 StatisticsPlugin.bar.title=Recettes et d\u00e9penses par cat\u00e9gories
 StatisticsPlugin.bar.tooltip=Ce graphique pr\u00e9sente le montant des d\u00e9penses et des recettes par cat\u00e9gorie
+StatisticsPlugin.bar.netValues.title=Afficher le solde
+StatisticsPlugin.bar.netValues.tooltip=Cochez cette case pour afficher les diff\u00e9rences entre les recettes et d\u00e9penses
 StatisticsPlugin.pie.tabname=D\u00e9penses nettes
 StatisticsPlugin.pie.tooltip=Ce graphique pr\u00e9sente la r\u00e9partition des d\u00e9penses nettes (d\u00e9penses - recettes) par cat\u00e9gorie
 StatisticsPlugin.pie.byCategory.empty=Aucune cat\u00e9gorie n'a plus de d\u00e9penses que de recettes
@@ -1334,5 +1336,6 @@ LinkEditor.url=Url \:
 LinkEditor.url.tooltip=Entrez l'URL de destination dans ce champ
 
 generic.recommended.with.parenthesis=(Recommand\u00e9)
+
 
 
