--- a/Yapbam/src/Resources_ro.properties
+++ b/Yapbam/src/Resources_ro.properties
@@ -1,174 +1,76 @@
 #X-Generator: crowdin.com
 
-MainFrame.Transactions=Verrichtingen
-MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negatieve balans\: {0}
-MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positieve balans\: {0}
-MainFrame.Transactions.Preferences.balanceSummary.title=Balanssamenvatting
-MainFrame.Transactions.Preferences.changeColor=Kleur wijzigen
-MainFrame.Transactions.Preferences.setDefault=Standaardinstellingen
-MainFrame.Transactions.Preferences.ChooseColorDialog.title=Kies een kleur
-MainFrame.ShowSubtransactions.All=Alle
-MainFrame.ShowSubtransactions.None=Geen
-MainFrame.showColumns=Kolommen tonen...
+MainFrame.ReadError=Yapbam nu este capabil de a citi acest fi\u0219ier
+MainFrame.Transactions=Tranzac\u021bie
+MainFrame.Transactions.Preferences.changeColor=Schimbare culoare
+MainFrame.Transactions.Preferences.changeColor.tooltip=Click aici pentru a schimba culoarea textului
+MainFrame.Transactions.Preferences.ChooseColorDialog.title=Alege o culoare
+MainFrame.ShowSubtransactions.All=Toate
+MainFrame.ShowSubtransactions.None=Nimic
+MainFrame.showColumns=Afi\u0219eaz\u0103 coloane...
+MainFrame.showColumns.ToolTip=Utiliza\u021bi acest meniu pentru a afi\u0219a sau a ascunde coloane
+MainFrame.stat.hide.tip=Click aici pentru a vedea mai pu\u021bine detalii
+MainFrame.stat.show.tip=Click aici pentru mai multe detalii
 
-MainMenu.File=Bestand
+MainMenu.File=Fi\u0219ier
+MainMenu.File.Mnemonic=F
 
-MainMenu.NewFile=Nieuw
+MainMenu.NewFile=Nou
+MainMenu.NewFile.Mnemonic=N
 
-MainMenu.Open=Openen
-
-MainMenu.Save=Opslaan
-
-MainMenu.SaveAs=Opslaan als ...
+MainMenu.Open=Deschis
+MainMenu.Open.Mnemonic=D
 
 
-MainMenuBar.Print.Error.Title=Fout bij het afdrukken
 
-MainMenu.Preferences=Voorkeuren
 
-MainMenu.Quit=Afsluiten
+MainMenuBar.Print.Error.Title=Eroare \u00een timpul imprim\u0103rii
+
+MainMenu.Preferences=Preferin\u021be
+
 
 #This menu has been removed
 #MainMenu.Accounts=Accounts
 #MainMenu.Accounts.Mnemonic=A
 #MainMenu.Accounts.ToolTip=Allows you to manage the accounts (creation, renaming, ...)
 
-MainMenu.Accounts.New=Nieuwe rekening
-MainMenu.Accounts.New.ToolTip=Maakt een nieuwe rekening aan
-
-MainMenu.Transactions=Verrichtingen
-MainMenu.Transactions.ToolTip=Hiermee kan je verrichtingen beheren (aanmaken, bewerken,...)
-
-MainMenu.Transactions.New=Nieuwe verrichting
-MainMenu.Transactions.New.ToolTip=Een nieuwe verrichting aanmaken
 
 
-MainMenu.Transactions.Delete=Verrichting verwijderen
+
+
 #MainMenu.Transactions.Delete.Accelerator=D
 
-MainMenu.Transactions.Edit=Verrichting bewerken
-
-MainMenu.Transactions.Check=Verrichting nakijken
 
 
-MainMenuBar.eraseFilters=Filters wissen
-MainMenuBar.eraseFilters.toolTip=Wist alle filters
-MainMenuBar.Expenses=Uitgaven
-MainMenuBar.NoFilter=Geen filter
-MainMenuBar.Expenses.toolTip=Selecteert uitgaven
 
-MainMenu.QuestionMark=?
-MainMenu.QuestionMark.ToolTip=Toont hulp
 
-MainMenu.help=Hulp
 
-MainMenu.About=Over...
 
-MainMenu.CheckUpdate.NoUpdate.title=Geen update beschikbaar
+
 #Dialog displayed during online check for updates
 
 
-BalanceHistory.title=Balansgeschiedenis
-BalanceHistory.graph.title=Grafiek
-BalanceHistory.balance=Balans van {0}\: {1}
-BalanceHistory.showGrid=Raster weergeven
-BalanceHistory.alerts=Waarschuwingen\:
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
-BalanceHistory.alerts.format={0}\: {1,date,short} ({2})
-BalanceHistory.transaction.title=Verrichtingen
-
-AboutDialog.License.TabName=Licentie
-AboutDialog.Contributors.TabName=Medewerkers
-
-AccountDialog.title.new=Nieuwe rekening
-AccountDialog.title.edit=Rekening bewerken
-AccountDialog.account=Rekening\:
-AccountDialog.balance=Beginbalans\:
 
 
-ModeDialog.account=Rekening\: {0}
-ModeDialog.name=Naam\:
-ModeDialog.name.short=Korte naam
-ModeDialog.forDebts.short=Uitgaven
-ModeDialog.useCheckBook=Een chequeboek gebruiken
-ModeDialog.daysNumber=Aantal dagen\:
-ModeDialog.debt=Debet\:
-ModeDialog.deferred=Uitgesteld
-ModeDialog.immediate=Onmiddellijk
-ModeDialog.relative=Relatief
-
-CategoryDialog.category=Categorie\:
-
-NotSavedDialog.ignore=Negeren
-NotSavedDialog.save=Opslaan
 
 
-Generic.example=Voorbeeld\:
-Generic.warning=Waarschuwing
-GenericButton.cancel=Annuleren
-GenericButton.close=Sluiten
-GenericButton.new=Nieuw
-GenericButton.edit=Bewerken
-GenericButton.delete=Verwijderen
-GenericButton.duplicate=Dupliceren
-GenericButton.yes=Ja
-GenericButton.no=Nee
-GenericButton.ignore=Negeren
-GenericButton.continue=Doorgaan
+
+
+
+
 #A generic button in the alert dialog to deactivate the alert
-GenericButton.dontAskMeAnyMore=Niet meer vragen
-
-Transaction.account=Rekening
-Transaction.14=Rest
-Transaction.date=Datum
-Transaction.description=Omschrijving
-Transaction.amount=Bedrag
-Transaction.category=Categorie
-Transaction.mode=Modus
-Transaction.number=Nummer
-Transaction.valueDate=Valutadatum
-
-TransactionDialog.amount=Bedrag\:
-TransactionDialog.category=Categorie\:
-TransactionDialog.description=Omschrijving\:
-TransactionDialog.number=Nummer\:
-TransactionDialog.title.new=Nieuwe verrichting
-TransactionDialog.title.edit=Verrichting bewerken
-TransactionDialog.valueDate=Valutadatum\:
-TransactionDialog.SubPanel.add=Toevoegen aan verrichting
-TransactionDialog.SubPanel.delete=Verwijderen
-TransactionDialog.SubPanel.modify=Bewerken
 
 
-Category.undefined=Onbepaald
-Mode.undefined=Onbepaald
 
-PreferencesDialog.title=Voorkeuren
-PreferencesDialog.Localization.country=Land
-PreferencesDialog.Localization.customCountry=Eigen
-PreferencesDialog.Localization.defaultCountry=Standaard ({0})
-PreferencesDialog.Localization.language=Taal
-PreferencesDialog.Localization.revert=Terug naar beginwaarden
 
-PreferencesDialog.AutoUpdate.interval.part1=Om de
-PreferencesDialog.AutoUpdate.interval.part2=dagen
 
-PreferencesDialog.LookAndFeel.title=Uitzicht
+
+
 #-------- preference sub-panel about general graphic theme -------
 
-PreferencesDialog.Network.title=Netwerk
-PreferencesDialog.Network.password=Wachtwoord\:
-PreferencesDialog.Network.user=Gebruiker\:
-PreferencesDialog.Network.showPassword=Wachtwoord tonen
 
-PeriodicalTransactionDialog.period=Daarna om de
-PeriodicalTransactionDialog.the=de
-PeriodicalTransactionDialog.until=tot
-PeriodicalTransactionDialog.transactionBorderTitle=Verrichting
 
-PeriodicalTransactionManager.nextDate.column=Volgende
-PeriodicalTransactionManager.period.column=Om de
-PeriodicalTransactionManager.period.daily.content={0,number} dagen
 
 #AccountManager.modesNumber.title=Number of payment modes
 #AccountManager.checkbooksNumber.title=Number of checkbooks
@@ -185,41 +87,24 @@ PeriodicalTransactionManager.period.daily.content={0,number} dagen
 
 
 
-StatisticsPlugin.title=Statistieken
 
 
 
-CustomFilterPanel.description.contains=Bevat
-CustomFilterPanel.description.ignoreCase=Hoofd/kleine letters negeren
-
-CustomFilterPanel.amout.between=Tussen
-CustomFilterPanel.amount.maximum=Maximumbedrag
-CustomFilterPanel.amount.to=en
-CustomFilterPanel.amout.minimum=Minimumbedrag
-
-
-CustomFilterPanel.date.equals=Gelijk is aan
-CustomFilterPanel.date.between=Tussen
-CustomFilterPanel.date.to=en
-
-CustomFilterPanel.valueDate.between=Tussen
-CustomFilterPanel.valueDate.equals=Gelijk is aan
-CustomFilterPanel.valueDate.from.toolTip=Eerste valutadatum
-
-
-CustomFilterPanel.statement.equals=Gelijk is aan
 
 
 
-BudgetPanel.sum=TOTAAL
 
 
 
-ImportDialog.help=Hulp
+
+
+
+
+
+
 # When an imported file contains erroneous lines, a report is displayed
 
 #Account administration panel / checkbook's table
-checkbookDialog.next.short=Volgende cheque
 #Checkbook edition dialog
 #Dialog displayed when the last check in a checkbook is used
 
@@ -227,15 +112,12 @@ checkbookDialog.next.short=Volgende cheque
 # Dialog message
 
 # Menu item to set a password to protect the data
-MainMenu.Protect=Wachtwoordbeveiliging...
 
 # Dialogs dealing with setting or getting the file password
 # A warning message to warn about the fact that forgetting the password leads to permanent data loss.
-FilePasswordDialog.confirm=Wachtwoordbevestiging
 
 #The title of the receipt column
 #The title of the debt column
-StatementView.debt=Schuld
 
 #-------- Error Reporting part --------
 #Dialog
@@ -261,7 +143,6 @@ StatementView.debt=Schuld
 
 #This message is displayed if the download fails
 #In this dialog, there is the standard cancel button and a retry button
-Update.DownloadFailed.retry=Opnieuw proberen
 
 #The update process is divided in two parts.
 #First, the updated files are downloaded.
@@ -284,8 +165,6 @@ Update.DownloadFailed.retry=Opnieuw proberen
 #-------- end of the welcome screen part --------
 
 #-------- AccountsSummary View --------
-AccountsSummary.title=Rekeningenoverzicht
-AccountsSummary.TransactionsNumber=Aantal verrichtingen
 #-------- End of AccountsSummaryView --------
 
 #-------- New "important news" screen -------
@@ -300,7 +179,6 @@ AccountsSummary.TransactionsNumber=Aantal verrichtingen
 # A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
 # without closing the dialog (the dialog is reset to its empty state).
 # In order to keep it simple for the newbie, this button only appears when the user presses the shift key while opening the dialog
-TransactionDialog.next=Volgende
 
 #A new transaction's attribute: a comment
 #Field tooltip in the "new transaction" dialog
@@ -331,29 +209,18 @@ TransactionDialog.next=Volgende
 
 #----------------------------------
 #New dialog to enter a transfer between two accounts
-TransferDialog.menu=Nieuwe overschrijving
-TransferDialog.title=Nieuwe overschrijving
-TransferDialog.from.title=Van
-TransferDialog.to.title=Tot
 #The two following lines are the description of the transactions
 #example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
-TransferDialog.from.description=Tot {0}
-TransferDialog.to.description=Van {0}
 
 #----------------------------------
 #In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
-MainFrame.Transactions.Preferences.expenseSample=Uitgave
 
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
-Backup.preference.ftp.ftp=FTP
-Backup.preference.ftp.server=Server\:
-Backup.preference.ftp.directory=Map\:
 
-Backup.preference.disk.default=Standaard
 
 
 # A new process is implemented to check the transactions in the Statement tab.
@@ -371,9 +238,7 @@ Backup.preference.disk.default=Standaard
 #New error message in the proxy preference panel.
 
 #Correction of singular/plural spelling in periodical transactions table
-PeriodicalTransactionManager.period.daily.singular.content=dagen 
 #Periodical transactions can now have a period based on years
-PeriodicalTransactionDialog.years=jaren
 
 #Categories can now contains sub-categories
 #Here are the wording of the button in charge of grouping the sub-categories
@@ -389,8 +254,6 @@ PeriodicalTransactionDialog.years=jaren
 
 #In the generate periodical transactions dialog, the previous ignored column will be split in two columns.
 #GeneratePeriodicalTransactionsDialog.ignored=Ignored
-GeneratePeriodicalTransactionsDialog.cancelled=Geannuleerd
-GeneratePeriodicalTransactionsDialog.postponed=Uitgesteld
 
 #In the account administration panel, a new edit button opens an edit dialog. The direct editing in the table is no more available 
 
@@ -404,18 +267,12 @@ GeneratePeriodicalTransactionsDialog.postponed=Uitgesteld
 #Core JClop messages
 
 #Wordings related to the new file selection dialog
-com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Openen
-com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Opslaan
 
 #Wordings related to computer's storage tab of the file selection dialog.
-com.fathzer.soft.jclop.FileChooserPanel.title=Computer
 
-com.fathzer.soft.jclop.Chooser.account=Rekening\: 
 #first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.fileName=Bestand\: 
 
 #Wordings related to data size units
-com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
 
 #end of core JClop messages
 
@@ -432,7 +289,6 @@ com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
 #End of dialog related to Dropbox service
 
 
-com.fathzer.soft.jclop.GenericWait.title=Even geduld...
 
 
 #Message when trying to write data to a non writable file
@@ -443,13 +299,10 @@ com.fathzer.soft.jclop.GenericWait.title=Even geduld...
 
 #Theme preference panel has been completed by a font size panel, so it has now two sub-panels
 #First is the old theme panel, second is the font size panel. The global panel's title is now less precise
-PreferencesDialog.Theme.fontSize=Lettergrootte
 #As the font size setting is only available with the Nimbus theme, the control is disabled when other theme is selected
 
 #Adds a menu file in the file menu to display the latest opened files  
-RecentFiles.title=Recente bestanden
 #Alert dialog displayed when a deleted file is selected
-RecentFiles.unreachable.title=Bestand niet gevonden
 
 #A detailed error when proxy setting is wrong while looking for updates 
 
