--- a/Yapbam/src/Resources_nl.properties
+++ b/Yapbam/src/Resources_nl.properties
@@ -18,9 +18,12 @@ MainMenu.NewFile=Nieuw
 MainMenu.Open=Openen
 
 MainMenu.Save=Opslaan
+MainMenu.Save.ToolTip=Bewaart het huidige bestand
 
 MainMenu.SaveAs=Opslaan als ...
 
+MainMenu.Import=Importeren
+MainMenu.Export.Mnemonic=E
 
 MainMenuBar.Print.Error.Title=Fout bij het afdrukken
 
@@ -47,12 +50,15 @@ MainMenu.Transactions.Delete=Verrichting verwijderen
 #MainMenu.Transactions.Delete.Accelerator=D
 
 MainMenu.Transactions.Edit=Verrichting bewerken
+MainMenu.Transactions.Edit.ToolTip=Bewerkt de huidige verrichting
 
 MainMenu.Transactions.Check=Verrichting nakijken
 
 
+MainMenuBar.Filter=Filtreren
 MainMenuBar.eraseFilters=Filters wissen
 MainMenuBar.eraseFilters.toolTip=Wist alle filters
+MainMenuBar.Receipts=Uittreksels
 MainMenuBar.Expenses=Uitgaven
 MainMenuBar.NoFilter=Geen filter
 MainMenuBar.Expenses.toolTip=Selecteert uitgaven
@@ -64,7 +70,10 @@ MainMenu.help=Hulp
 
 MainMenu.About=Over...
 
+MainMenu.CheckUpdate=Updates nagaan
+MainMenu.CheckUpdate.FirstRun.title=Update nagaan
 MainMenu.CheckUpdate.NoUpdate.title=Geen update beschikbaar
+MainMenu.CheckUpdate.Success.title=Er is een update beschikbaar
 #Dialog displayed during online check for updates
 
 
@@ -90,6 +99,7 @@ ModeDialog.account=Rekening\: {0}
 ModeDialog.name=Naam\:
 ModeDialog.name.short=Korte naam
 ModeDialog.forDebts.short=Uitgaven
+ModeDialog.forReceipts.short=Uittreksels
 ModeDialog.useCheckBook=Een chequeboek gebruiken
 ModeDialog.daysNumber=Aantal dagen\:
 ModeDialog.debt=Debet\:
