--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -5,6 +5,10 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.18.10 (06/05/2016)
+fix
+	In the calendar popups, selecting a date more than 20 years in the future resulted in a date in the past (ie 2050 was converted in 1950).
+
 version	0.18.9 (03/06/2016)
 fix
 	It was possible to validate the custom filter dialog with the "Checked transactions" check box checked and not radio button selected. This resulted in an error when clicking the "Validate" button if statement field was not empty. 
